[gd_scene load_steps=26 format=2]

[ext_resource path="res://AlgorithmScenes/Algorithms/BFSAlgorithm/BFSCode.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameFlow/StoryMode/story_before_level.gd" type="Script" id=2]
[ext_resource path="res://GameFlow/DialogueDisplayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://AlgorithmScenes/Screen/TextHintContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameFlow/StoryMode/BFS_SpriteSheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/textures/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://AlgorithmScenes/Code/NewDebugBlock.tscn" type="PackedScene" id=8]
[ext_resource path="res://AlgorithmScenes/Screen/graph_screen.gd" type="Script" id=15]
[ext_resource path="res://AlgorithmScenes/Screen/GUI/ADTsShower.tscn" type="PackedScene" id=28]
[ext_resource path="res://AlgorithmScenes/Code/ADTs/ADTMediator.tscn" type="PackedScene" id=34]
[ext_resource path="res://AlgorithmScenes/Screen/ADTIsNotEmptyPopup.tscn" type="PackedScene" id=36]
[ext_resource path="res://AlgorithmScenes/Screen/UNodeIsExploredPopup.tscn" type="PackedScene" id=37]
[ext_resource path="res://AlgorithmScenes/Screen/FinishedPopup.tscn" type="PackedScene" id=38]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 187, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 374, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 561, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 748, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 935, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1122, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1309, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1496, 0, 187, 175 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1683, 0, 187, 175 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=12]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 15 )
graph_density = 0.15
expects_dialogue_first = true

[node name="StoryBeforeLevel" type="Control" parent="."]
script = ExtResource( 2 )

[node name="DialogueCanvas" type="CanvasLayer" parent="StoryBeforeLevel"]
layer = 10

[node name="DialogueDisplayer" parent="StoryBeforeLevel/DialogueCanvas" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 0.886
dialogues_to_show = [ "STORYMODE_BFS1", "STORYMODE_BFS2", "STORYMODE_BFS3" ]

[node name="Image" type="CanvasLayer" parent="StoryBeforeLevel"]
layer = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="StoryBeforeLevel/Image"]
position = Vector2( 962.25, 541.75 )
scale = Vector2( 10.2433, 6.15143 )
frames = SubResource( 11 )
frame = 1
speed_scale = 0.5
playing = true

[node name="ADTMediator" parent="." instance=ExtResource( 34 )]
unique_name_in_owner = true
position = Vector2( 1, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextHintContainer" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
margin_left = 1370.0
margin_top = 661.0
margin_right = 1917.0
margin_bottom = 811.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" type="MarginContainer" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VB" type="VBoxContainer" parent="CanvasLayer/Screen"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mid" type="HBoxContainer" parent="CanvasLayer/Screen/VB"]
margin_right = 1910.0
margin_bottom = 766.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="MarginContainer" parent="CanvasLayer/Screen/VB/Mid"]
margin_right = 1406.0
margin_bottom = 766.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NodeContainer" type="MarginContainer" parent="CanvasLayer/Screen/VB/Mid/Container"]
unique_name_in_owner = true
margin_right = 1406.0
margin_bottom = 766.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EdgeContainer" type="MarginContainer" parent="CanvasLayer/Screen/VB/Mid/Container"]
unique_name_in_owner = true
margin_right = 1406.0
margin_bottom = 766.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MC" type="MarginContainer" parent="CanvasLayer/Screen/VB/Mid"]
margin_left = 1410.0
margin_right = 1910.0
margin_bottom = 766.0
rect_min_size = Vector2( 500, 0 )

[node name="BFSCodeBlock" parent="CanvasLayer/Screen/VB/Mid/MC" instance=ExtResource( 1 )]
margin_right = 500.0
margin_bottom = 766.0

[node name="Bottom" type="HBoxContainer" parent="CanvasLayer/Screen/VB"]
margin_top = 770.0
margin_right = 1910.0
margin_bottom = 1070.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2

[node name="DebugBlock" parent="CanvasLayer/Screen/VB/Bottom" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_top = 0.0
margin_right = 1406.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ADTShower" parent="CanvasLayer/Screen/VB/Bottom" instance=ExtResource( 28 )]
margin_left = 1410.0
margin_right = 1910.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 200 )
size_flags_vertical = 3

[node name="ReadyAnimation" type="AnimationPlayer" parent="CanvasLayer"]
unique_name_in_owner = true
anims/OnStart = SubResource( 12 )

[node name="Popups" type="CanvasLayer" parent="."]
layer = 2

[node name="VNodeIsExploredPopup" parent="Popups" instance=ExtResource( 37 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -603.0
margin_top = -272.0
margin_right = 135.0
margin_bottom = -75.0

[node name="ADTIsNotEmptyPopup" parent="Popups" instance=ExtResource( 36 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.0
margin_top = -238.0
margin_right = 23.0
margin_bottom = -36.0

[node name="FinishedPopup" parent="Popups" instance=ExtResource( 38 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -605.0
margin_top = -359.0
margin_right = 145.0
margin_bottom = 5.0
explanation_in_label = "BFS_WIN_MESSAGE"

[node name="Background" parent="." instance=ExtResource( 6 )]
